Saving days to LS + visual fixed
- Saving a new day now saves the data properly to LS and creates a day id
- fixed visual bug on task headers so individual words which are too long for whole width now break into new line

--- a/main.css
+++ b/main.css
@@ -302,6 +302,7 @@ footer > p {
   display: inline-block;
   height: 11vh;
   max-width: 90%;
+  word-wrap: break-word;
 }
 
 .day-header {
